src/tensor.h

#ifndef TENSOR_H__
#define TENSOR_H__

#include "config.h"

#include "arena.h"
#include "node.h"

typedef struct Tensor {
	f32* data;
	i32 shape[MAX_DIMS];
	i32 ndim;
	bool visited;
	struct Tensor* grad;
	Node* node;
} Tensor;

Tensor* tensor_create(mem_arena* arena, const i32* shape, i32 ndim, bool non_zero);
f32* tensor_at(const Tensor* t, i32* indices);
void tensor_print(const Tensor* t);

// Utility
i32 tensor_number_elements(const Tensor* t);
Tensor* tensor_gather(mem_arena* arena, const Tensor* t, const i32* indices, i32 n);
void tensor_set_data(Tensor* t, const f32* data, i32 n);
void tensor_get_data(const Tensor* t, f32* data, i32 n);

// Initialisation
void tensor_fill(Tensor* t, f32 val);
Tensor* tensor_copy(mem_arena* arena, const Tensor* t);
Tensor* tensor_zeros(mem_arena* arena, i32* shape, i32 ndim);
Tensor* tensor_ones(mem_arena* arena, i32* shape, i32 ndim);
Tensor* tensor_rand(mem_arena* arena, i32* shape, i32 ndim);
Tensor* tensor_xavier(mem_arena* arena, i32* shape, i32 ndim);

// Ops
Tensor* tensor_trans(mem_arena* arena, const Tensor* a);
Tensor* tensor_add(mem_arena* arena, const Tensor* a, const Tensor* b);
Tensor* tensor_mul(mem_arena* arena, const Tensor* a, f32 c);
Tensor* tensor_matmul(mem_arena* arena, const Tensor* a, const Tensor* b);

// Nonlinearities
Tensor* tensor_relu(mem_arena* arena, const Tensor* a);
Tensor* tensor_softmax(mem_arena* arena, const Tensor* a);
Tensor* tensor_sigmoid(mem_arena* arena, const Tensor* a);

// Loss functions
Tensor* tensor_mse(mem_arena* arena, const Tensor* a, const Tensor* b);
Tensor* tensor_ce(mem_arena* arena, const Tensor* a, const Tensor* b);
Tensor* tensor_bce(mem_arena* arena, const Tensor* a, const Tensor* b);

#endif // !TENSOR_H__